# fenec_dev

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TODO.md  aggregate_files.sh  aggregated_contents.txt  aggregated_contents_fenec.txt  cli_app.py  main.py  post_code_types.py  pyproject.toml
ai_services/: stream_summarizer_test.py  summarization_manager.py  summarizer.py  summarizer_assistant.py  summarizer_configs.py  summarizer_protocol.py  temp.py
ai_services/prompts/: summarization_prompts.py
arango_db/: arango_db_builder.py  arango_db_manager.py
chroma/: chroma.sqlite3
docs/: Json_Hanlder.md  Models.md  Updaters.md
docs/AI Services/: Chat.md  Librarian.md  Summarizer.md
docs/Databases/: ArangoDB.md  ChromaDB.md
docs/Python_Parsing/: ID_Generation.md  Model_Builders.md  Parser.md  Visitor_Manager.md  Visitors.md
fenec/: __init__.py  api.py  cli_app.py
fenec/configs/: __init__.py
fenec/json_management/: json_handler.py
fenec/models/: __init__.py  enums.py  models.py
fenec/types/: chroma.py  fenec.py  ollama.py  openai.py
fenec/updaters/: change_detector.py  git_updater.py  graph_db_updater.py
json_management/: json_handler.py
output/: directory_map.json
output/json/: __init__.json  ai_services:__init__.json  ai_services:prompt_creator.json  ai_services:prompts:__init__.json  ai_services:prompts:summarization_prompts.json  ai_services:summarizer.json  (+150 more)
output_json/: directory_map.json
pc_output_json/: directory_map.json  last_commit.json
postcode/: __init__.py  api.py  app.py  cli_app.py
python_parser/: main.py
(+1204 files in other folders)
