[tool.poetry]
name = "postcode"
version = "0.1.0"
description = ""
authors = ["Evan Schultz <evan@postulate.llc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
libcst = "^1.1.0"
rich = "^13.7.0"
hypothesis = "^6.91.0"
python-arango = "^7.8.1"
openai = "^1.3.8"
chromadb = "^0.4.20"
pytest = "^7.4.4"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
postcode = "postcode.cli_app:app"
